--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-hello ajith you learning html
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<h1>This is ajith</h1>
+<p>Bagundhi ra mowa</p>
+<body>
+    
+</body>
+</html>
