--- a/index.html
+++ b/index.html
@@ -4,10 +4,112 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
-<h1>This is ajith</h1>
-<p>Bagundhi ra mowa</p>
 <body>
-    
+    <header>
+        <h1>Welcome to My Portfolio</h1>
+        <div>
+    <a href="#About">
+        <button class="button">About</button>
+    </a>
+    <a href="#Skills">
+        <button class="button">Skills</button>
+    </a>
+    <a href="#Projects">
+        <button class="button">Project</button>
+    </a>
+    <a href="#Contacts">
+        <button class="button">Contact</button>
+    </a>
+    </div>
+ 
+    </header>
+    <main>
+        <section id="About">
+<h1>Ajithkumar Mothkuri</h1>
+    <img src="ajith.jpg"  width="300" height="400" alt="A photo of me">
+    <p>I am a passionate web developer with a focus on front end technologies.</p>
+    <p>Iam currently Pursuing my B.Tech in <em> CMR Institute of Technology Kandlakoya.</em></p>
+    <p>I have learnt Web Development from <br>Code With Swaroop.</p>
+    <p>>You can <strong>Click here</strong> to Checkout What I have learnt in HTML,CSS,JS.</p>
+        </section>
+        <section id="Skills">
+<h1>My Skills</h1>
+<br>
+    <ol>
+        <li>Python Basics</li>
+        <li>Html Basics</li>
+        <li>Css Basics</li>
+        <li>Javascript Basics</li>
+    </ol>
+
+        </section>
+        <section id="Projects">
+
+    <h1>My Projects</h1>
+    <br>
+    <table border="1">
+<tr>
+    <th>Projects</th>
+    <th>Description</th>
+</tr>
+<tr>
+<th>Portfolio Website</th>
+<th>I have a built a Portfolio website by using HTML, CSS &Javascript</th>
+</tr>
+<tr>
+    <th>Python simple calculator</th>
+    <th>I have built a simple calculator in the course by code with Aifortechies</th>
+</tr>
+
+    </table>
+        </section>
+        <section id="Contacts">
+<h1>Contact</h1>
+<br>
+    <p>Feel free to get in touch with me using the form below:</p>
+    <form action="">
+    <div>
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name">
+    </div>
+    <div>
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email">
+</div>
+<div>
+    <b>Choose your Gender:</b>
+    <br>
+    <input type="radio" id="male" value="male"
+    <label for="male">Male:</label>
+    <input type="radio" id="female" value="female"
+    <label for="female">Female:</label>
+</div>
+<div>
+<b>Select your interests:</b>
+<br>
+<input type="checkbox" id="reading" value="reading">
+<label for="reading">Reading</label>
+<input type="checkbox" id="coding" value="coding">
+<label for="coding">Coding</label>
+</div>
+<div>
+<label for="bio">Bio (upto 200 charcters):</label>
+<br>
+<input type="text">
+</div>
+<button type="submit" class="submit">Submit</button>
+
+    </form>
+        </section>
+    </main>
+    <a href="">
+    <button class="fixedbutton">Top</button>
+    </a>
+    <footer>
+       <p>@2025 My portfolio</p> 
+    </footer>
 </body>
 </html>
+    
